--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -28,16 +28,17 @@ jobs:
         instance:
           - TYPE: g4ad.xlarge
             AMI: ami-0f8c4824f9f2e449e
+            index: 0
           - TYPE: g4dn.xlarge
             AMI: ami-06615d18bfde0a1e7
+            index: 1
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
     outputs:
-      labels: ${{ steps.start-ec2-runner.outputs.label }}  # Outputs JSON array of runner labels
-      ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
-      runner-labels: ${{ steps.set-label.outputs.label }}
+      label_${{ matrix.index }}: ${{ steps.start-ec2-runner.outputs.label }}  # Outputs JSON array of runner labels
+      ec2-instance-id_${{ matrix.index }}: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -70,6 +71,11 @@ jobs:
       - name: Store Label in File
         id: set-label
         run: echo "label=${{ steps.start-ec2-runner.outputs.label }}" >> $GITHUB_OUTPUT
+      - name: Store Label in File
+        id: append-label
+        run: |
+          OLD_LABEL="${{ steps.set-label.outputs.label }}"
+          echo "label=$OLD_LABEL:${{ steps.start-ec2-runner.outputs.label }}" >> $GITHUB_OUTPUT
           
   collect-runner-labels:
     name: Collect Runner Labels
@@ -86,12 +92,12 @@ jobs:
         
   build-on-aws:
     name: Build on aws
-    needs: [start-runner,collect-runner-labels] # required to start the main job when the runner is ready
+    needs: start-runner # required to start the main job when the runner is ready
     runs-on: ${{ matrix.runner }} # run the job on the newly created runner
     strategy:
       fail-fast: false
       matrix:
-        runner: ${{ fromJson(needs.collect-runner-labels.outputs.labels) }}
+        runner: [ "${{ needs.start-runner.outputs.label_0 }}" , "${{ needs.start-runner.outputs.label_1 }}" ]
         preset: ["develop", "production"]
     steps:
       - name: Prepare environment
@@ -138,7 +144,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runner: ${{ fromJson(needs.start-runner.outputs.labels) }}
+        runner: [ "${{ needs.start-runner.outputs.label_0 }}" , "${{ needs.start-runner.outputs.label_1 }}" ]
     steps:
       - name: Build NeoFOAM
         shell: bash -i {0}
