--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -75,14 +75,10 @@ jobs:
       - name: Upload Label Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: labels
-          path: label_${{ matrix.instance.index }}.txt
-          retention-days: 1
-      - name: Upload EC2 Instance ID Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ec2-instance-ids
-          path: ec2-instance-id_${{ matrix.instance.index }}.txt
+          name: labels_${{ matrix.instance.index }}
+          path: |
+            label_${{ matrix.instance.index }}.txt
+            ec2-instance-id_${{ matrix.instance.index }}.txt
           retention-days: 1
   aggregate-labels:
     needs: start-runner
@@ -92,27 +88,36 @@ jobs:
       all_ec2_ids: ${{ steps.aggregate.outputs.ec2_ids }}
 
     steps:
-      - name: Download Label Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: labels
-          path: labels
+      - name: Initialize Empty JSON Arrays
+        run: |
+          echo "LABELS_JSON=[]" >> $GITHUB_ENV
+          echo "EC2_IDS_JSON=[]" >> $GITHUB_ENV
 
-      - name: Download EC2 ID Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: ec2-instance-ids
-          path: ec2-instance-ids
-
-      - name: Aggregate Labels and EC2 IDs as JSON
+      - name: Loop Through Matrix Indices and Download Artifacts
         id: aggregate
         run: |
-          # Read labels and convert them into a JSON array
-          LABELS_JSON=$(jq -R . < labels/*.txt | jq -s .)
-          echo "labels=$LABELS_JSON" >> $GITHUB_OUTPUT
+          LABELS=()
+          EC2_IDS=()
 
-          # Read EC2 instance IDs and convert them into a JSON array
-          EC2_IDS_JSON=$(jq -R . < ec2-instance-ids/*.txt | jq -s .)
+          for index in {0..10}; do  # Adjust max index if needed
+            artifact_name="labels_${index}"
+            mkdir -p downloaded_artifacts/$artifact_name
+
+            echo "Trying to download: $artifact_name"
+            if gh run download --name "$artifact_name" --dir "downloaded_artifacts/$artifact_name"; then
+              LABEL=$(cat downloaded_artifacts/$artifact_name/label_${index}.txt)
+              EC2_ID=$(cat downloaded_artifacts/$artifact_name/ec2-instance-id_${index}.txt)
+              
+              LABELS+=("\"$LABEL\"")
+              EC2_IDS+=("\"$EC2_ID\"")
+            fi
+          done
+
+          # Convert arrays to JSON
+          LABELS_JSON=$(echo "[${LABELS[*]}]" | jq -c .)
+          EC2_IDS_JSON=$(echo "[${EC2_IDS[*]}]" | jq -c .)
+
+          echo "labels=$LABELS_JSON" >> $GITHUB_OUTPUT
           echo "ec2_ids=$EC2_IDS_JSON" >> $GITHUB_OUTPUT
 
       - name: Show Aggregated Data
