--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -110,9 +110,8 @@ jobs:
           for index in {0..1}; do  # Adjust max index if needed
             # Read values from downloaded files
             ls downloaded_data
-            unzip "downloaded_data/labels_${index}.zip" -d "downloaded_data"
-            LABEL=$(cat downloaded_data/labels_${index}/label_${index}.txt)
-            EC2_ID=$(cat downloaded_data/labels_${index}/ec2-instance-id_${index}.txt)
+            LABEL=$(cat downloaded_data/label_${index}.txt)
+            EC2_ID=$(cat downloaded_data/ec2-instance-id_${index}.txt)
 
             # Append to arrays
             LABELS+=("\"$LABEL\"")
