--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -119,8 +119,8 @@ jobs:
           done
 
           # Convert arrays to JSON
-          LABELS_JSON=$(echo "[${LABELS[*]}]" | jq -c .)
-          EC2_IDS_JSON=$(echo "[${EC2_IDS[*]}]" | jq -c .)
+          LABELS_JSON=$(echo "${LABELS[@]}" | jq -s .)
+          EC2_IDS_JSON=$(echo "${EC2_IDS[@]}" | jq -s .)
 
           echo "labels=$LABELS_JSON" >> $GITHUB_OUTPUT
           echo "ec2_ids=$EC2_IDS_JSON" >> $GITHUB_OUTPUT
