--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -122,6 +122,8 @@ jobs:
           LABELS_JSON=$(echo "${LABELS[@]}" | jq -s .)
           EC2_IDS_JSON=$(echo "${EC2_IDS[@]}" | jq -s .)
 
+          echo $LABELS_JSON
+
           echo "labels=$LABELS_JSON" >> $GITHUB_OUTPUT
           echo "ec2_ids=$EC2_IDS_JSON" >> $GITHUB_OUTPUT
 
